# ks-cheat-sheets

./: .gitignore  README.md
ai/cli/: README.md
ai/databricks-ai-dev-kit/: .markdownlint.json  README.md
ai/llm-wiki/: README.md
ai/microsoft-foundry/: README.md
ai/rules-skills/: README.md
clouds/aws/: README.md
clouds/azure/: README.md
clouds/gcp/: README.md
data-catalogs/: README.md
data-catalogs/boringcatalog/: README.md
data-catalogs/egeria/: README.md
data-catalogs/hive-metastore/: README.md
data-catalogs/unity-catalog/: README.md
data-processing/arkflow/: README.md
data-processing/dbt/: README.md
data-processing/preswald/: README.md
data-processing/spark/: .gitignore  Makefile  README.md  pyproject.toml
data-processing/spark/data/dim_customer/: .gitignore
data-processing/spark/declarative-pipelines/: README.md
data-processing/spark/delta/: README.md
data-processing/spark/examples/: README.md
data-processing/spark/examples/000-data-setup/: Makefile  README.md  pyproject.toml
data-processing/spark/examples/000-data-setup/src/000_data_setup/: generate_customer_datasets.py
data-processing/spark/examples/001-scd2-w-delta/: .gitignore  Makefile  README.md  pyproject.toml  spark-generate-customer-increment.py  spark-merge-customer.py
data-processing/spark/examples/001-scd2-w-delta/sdp-005-sc-w-uc/: .gitignore  spark-pipeline.yml.sample
data-processing/spark/examples/001-scd2-w-delta/sql/: ddl.sql  select-dim-customer-limit10.sql
data-processing/spark/examples/001-scd2-w-delta/src/001_scd2_w_delta/: ddl-iceberg.py  ddl.py  main.py  sc-and-uc-select-dim-customer-limit10.py  sc-ddl.py  sc-select-dim-customer-limit10.py  sc-w-uc-ddl.py  select-dim-customer-limit10.py  spark-merge-customer.py  test_001_delta_simple.py  test_002_delta_uc_only.py  test_003_delta_sc_only.py  test_004_delta_sc_w_uc.py  uc-select-dim-customer-limit10.py
data-processing/spark/examples/001-scd2-w-delta/src/001_scd2_w_delta/jobs/: merge_customer_001_simple.py  merge_customer_002_uc_only.py  merge_customer_003_sc_only.py  merge_customer_004_sc_and_uc.py  merge_customer_004_sc_w_uc.py
data-processing/spark/examples/002-incremental-vs-full/: README.md
data-processing/spark/examples/003-row-level-lineage/: explo.ipynb  pyproject.toml  pyspark-row-lineage.py  pyspark_row_lineage.py  tests.ipynb
data-processing/spark/examples/004-sdp-quick-start/: .gitignore  Makefile  README.md  pyproject.toml
data-processing/spark/examples/004-sdp-quick-start/poc_pipeline/: spark-pipeline.yml
data-processing/spark/examples/004-sdp-quick-start/sql/: ddl.sql  select-dim-customer-limit10.sql
data-processing/spark/examples/004-sdp-quick-start/src/004_sdp_quick_start/: spark-generate-customer-increment.py  spark-merge-customer.py
data-processing/spark/examples/004-spd-quick-start/: Makefile  README.md  pyproject.toml
data-processing/spark/examples/004-spd-quick-start/poc_pipeline/: spark-pipeline.yml
data-processing/spark/examples/004-spd-quick-start/sql/: select-dim-customer-limit10.sql
data-processing/spark/examples/004-spd-quick-start/src/004_spd_quick_start/: spark-generate-customer-increment.py  spark-merge-customer.py
data-processing/spark/spark-connect/: Makefile  README.md
data-processing/spark/spark-connect/data/dim_customer/inc1/: .part-00000-0b0a577c-bf77-48fe-8b10-406b4c34b625-c000.snappy.parquet.crc  part-00000-0b0a577c-bf77-48fe-8b10-406b4c34b625-c000.snappy.parquet
data-processing/spark/spark-connect/data/dim_customer/init/: .part-00000-1689b86f-c561-4ecd-b71f-0540261bcaec-c000.snappy.parquet.crc  part-00000-1689b86f-c561-4ecd-b71f-0540261bcaec-c000.snappy.parquet
data-processing/spark/spark-connect/src/spark_connect_quickstart/: 001-create-table.py  001-generate-datasets.py  002-create-table.py  002-read-table.py  003-read-table.py
data-processing/spark/spd/: README.md
data-processing/sqlmesh/: README.md
data-product-management/ontos/: README.md
data-quality/great-expectations/: README.md
data-query/usql/: README.md
data-storage/apache-arrow-ecosystem/: README.md
data-storage/ducklake/: README.md
data-storage/lakefs/: .gitignore  README.md
data-storage/minio/: README.md
data-storage/seaweedfs/: README.md
db/: TODO.md
db/dremio/: README.md
db/duckdb/: .gitignore  README.md  elt-geonames.py
db/postgresql/: README.md  data
db/trino/: README.md
frameworks/: homebrew.md
frameworks/dbt/: README.md
frameworks/docker/: README.md  rancher-desktop.md
frameworks/egeria/: README.md
frameworks/hive-metastore/: README.md
frameworks/k8s/: README.md
frameworks/lakefs/: README.md
frameworks/minio/: README.md
frameworks/nexus/: README.md
frameworks/serverless/: README.md
infrastructure/apache-ozone/: README.md
infrastructure/databricks-apps/: README.md
infrastructure/docker/: README.md  rancher-desktop.md
infrastructure/k8s/: README.md
infrastructure/serverless/: README.md
js-world/: README.md
orchestrators/airflow/: .gitignore  Pipfile.in  README.md
orchestrators/n8n/: README.md
packaging/deb-world/: README.md
programming/python/numbers/: pyproject.toml
programming/python/numbers/src/numbers/: __init__.py
(+133 files in other folders)
