[project]
name = "numbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Denis Arnaud", email = "denis.arnaud@decathlon.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
