[project]
name = "000-data-setup"
version = "0.0.1"
description = "Setup of datasets for all the other Spark-related examples"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Denis Arnaud", email = "denis.arnaud_fedora@m4x.org"},
]
urls = {repository = "https://github.com/data-engineering-helpers/ks-cheat-sheets"}

# DEPENDENCIES
dependencies = [
    "datanomy",
    "faker",
    "loguru",
    "PyYAML"
]

[dependency-groups]
dev = [
  "packaging",
  "pyspark",
  "delta-spark",
  "ruff",
  "setuptools",
  "toml",
  "twine",
]
lint = [
  "ruff"
]

[project.scripts]
generate_customer_datasets_job = "generate_customer_datasets:main"

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.ruff]
#src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203", "E501", "E712"]

[tool.ruff.lint.pydocstyle]
convention = "google"

